basic changes to ensure project compiles